@@ -3,3 +3,6 @@
 --no-class_inherits_from_params_class-check
 --no-140chars-check
 --no-trailing_comma-check
+# This is here because the code can't handle lookups in parameters and we have
+# a LOT of those
+--no-parameter_order-check
